<resources>
    <string name="app_name">AlignmentIndicator</string>
    <string name="a">A:</string>
    <string name="value_of_a">Value of A</string>
    <string name="b">B:</string>
    <string name="value_of_b">Value of B</string>
    <string name="c">C:</string>
    <string name="value_of_c">Value of C</string>
    <string name="x">X:</string>
    <string name="value_of_x">Value of X</string>
    <string name="y">Y:</string>
    <string name="value_of_y">Value of Y</string>
    <string name="z">Z:</string>
    <string name="value_of_z">Value of Z</string>
    <string name="status">Status:</string>
    <string name="bluetooth_status">Bluetooth Status</string>
    <string name="turn_on_bluetooth">Turn on Bluetooth</string>
    <string name="turn_off_bluetooth">Turn off Bluetooth</string>
    <string name="show_paired_devices">Show paired Devices</string>
    <string name="discover_new_devices">Discover New Devices</string>
</resources>
